<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/itemTimeline"
        android:icon="@android:drawable/ic_menu_sort_by_size"
        android:title="@string/tittleTimeline">
    </item>
    <item
        android:id="@+id/itemPrefs"
        android:icon="@android:drawable/ic_menu_preferences"
        android:title="@string/tittlePrefs">
    </item>
    <item
        android:id="@+id/itemServiceStar"
        android:icon="@android:drawable/ic_media_play"
        android:title="Star Service">
    </item>
    <item
        android:id="@+id/itemStopService"
        android:icon="@android:drawable/ic_menu_close_clear_cancel"
        android:title="Stop Service">
    </item>
    <item
        android:id="@+id/itemPurge"
        android:icon="@android:drawable/ic_menu_delete"
        android:title="@string/tittlePurge">
    </item>
    <item
        android:id="@+id/itemBlog"
        android:icon="@android:drawable/ic_menu_agenda"
        android:title="@string/tittleBlog">
    </item>

</menu>