<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/bg"
    android:orientation="vertical" >

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/tittleStatusUpdate"
        android:textColor="#060"
        android:textSize="25dp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/editText1"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_margin="10dp"
        android:layout_weight="1"
        android:background="#80f6"
        android:hint="@string/hintEditText1"
        android:inputType="text"
        android:padding="10dp"
        android:textSize="18dp" />

    <Button
        android:id="@+id/btStatusUpdate"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/btStatusUpdate"
        android:textSize="20dp" />

</LinearLayout>